<resources>
    <string name="app_name">Appointment Book</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="add">Add</string>
    <string name="owner">Owner</string>
    <string name="description">Description</string>
    <string name="begin_date_and_time">Begin Date, Time, AM/PM</string>
    <string name="end_date_and_time">End Date, Time, AM/PM</string>
    <string name="return_to_main">Return To Main</string>
    <string name="text">text</string>
    <string name="read_me">READ ME</string>
    <string name="title_activity_readme">readme</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="display_all">Display All</string>
    <string name="all_appointment_books">All Appointment Books</string>
    <string name="back_to_main">Back To Main</string>
    <string name="all_appointment">All Appointment</string>
    <string name="go_back">Go Back</string>
    <string name="searched_appointment">Searched Appointment</string>
    <string name="search_by_name_and_time">Search By Name and Time</string>
    <string name="search_by_name">Search By Name</string>
</resources>