<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/go_to_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/help"
        app:layout_constraintEnd_toEndOf="@+id/go_to_search"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_to_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="@+id/go_to_display"
        app:layout_constraintTop_toBottomOf="@+id/go_to_read" />

    <Button
        android:id="@+id/go_to_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="8dp"
        android:text="@string/display_all"
        app:layout_constraintStart_toStartOf="@+id/make_appointment"
        app:layout_constraintTop_toBottomOf="@+id/go_to_search" />

    <Button
        android:id="@+id/make_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/make_appointment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_display" />

    <ListView
        android:id="@+id/appts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="205dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>