<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchByName">

    <EditText
        android:id="@+id/searchName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:minEms="7"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ownerText"
        tools:ignore="LabelFor,TextFields"
        tools:text="Owner" />

    <TextView
        android:id="@+id/ownerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="131dp"
        android:text="@string/owner"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/searchName"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchButtonInName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="61dp"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="@+id/searchName"
        app:layout_constraintTop_toBottomOf="@+id/searchName" />

    <Button
        android:id="@+id/return_to_main_search_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="@string/return_to_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButtonInName" />


</androidx.constraintlayout.widget.ConstraintLayout>