<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search">

    <EditText
        android:id="@+id/ownerForSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:minEms="7"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/beginText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextFields"
        tools:text="Owner" />

    <EditText
        android:id="@+id/beginDateForSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:minEms="5"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/beginText"
        app:layout_constraintTop_toBottomOf="@+id/beginText"
        tools:ignore="LabelFor,TextFields"
        tools:text="Begin Date" />

    <EditText
        android:id="@+id/beginTimeForSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:importantForAutofill="no"
        android:minEms="3"
        app:layout_constraintBaseline_toBaselineOf="@+id/beginDateForSearch"
        app:layout_constraintStart_toEndOf="@+id/beginDateForSearch"
        tools:ignore="LabelFor,TextFields"
        tools:text="Begin Time" />

    <EditText
        android:id="@+id/beginAMForSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:importantForAutofill="no"
        android:minEms="2"
        app:layout_constraintBaseline_toBaselineOf="@+id/beginTimeForSearch"
        app:layout_constraintStart_toEndOf="@+id/beginTimeForSearch"
        tools:ignore="LabelFor,TextFields"
        tools:text="Begin AM" />

    <EditText
        android:id="@+id/endDateForSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:minEms="5"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/endTimeForSearch"
        app:layout_constraintStart_toStartOf="@+id/endText"
        tools:ignore="LabelFor,TextFields"
        tools:text="End Date" />

    <EditText
        android:id="@+id/endTimeForSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no"
        android:minEms="3"
        app:layout_constraintStart_toEndOf="@+id/endDateForSearch"
        app:layout_constraintTop_toBottomOf="@+id/endText"
        tools:ignore="LabelFor,TextFields"
        tools:text="End Time" />

    <EditText
        android:id="@+id/endAMForSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="12dp"
        android:layout_marginTop="1dp"
        android:importantForAutofill="no"
        android:minEms="2"
        app:layout_constraintStart_toEndOf="@+id/endTimeForSearch"
        app:layout_constraintTop_toTopOf="@+id/endTimeForSearch"
        tools:ignore="LabelFor,TextFields"
        tools:text="End AM" />

    <TextView
        android:id="@+id/ownerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="20dp"
        android:text="@string/owner"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/beginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/begin_date_and_time"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/ownerText"
        app:layout_constraintTop_toBottomOf="@+id/ownerForSearch" />

    <TextView
        android:id="@+id/endText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/end_date_and_time"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/beginDateForSearch"
        app:layout_constraintTop_toBottomOf="@+id/beginDateForSearch" />

    <TextView
        android:id="@+id/sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="28dp"
        android:minEms="20"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateForSearch" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:text="@string/search"
        app:layout_constraintBaseline_toBaselineOf="@+id/return_to_main_search"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/return_to_main_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="73dp"
        android:text="@string/return_to_main"
        app:layout_constraintStart_toEndOf="@+id/search_button"
        app:layout_constraintTop_toBottomOf="@+id/sum" />

</androidx.constraintlayout.widget.ConstraintLayout>