<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeNewAppointmentActivity">

    <EditText
        android:id="@+id/owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="75dp"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:minEms="7"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextFields"
        tools:text="Owner" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:minEms="15"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/descriptionText"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText"
        tools:ignore="LabelFor,TextFields"
        tools:text="Description" />

    <EditText
        android:id="@+id/beginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:minEms="5"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/beginText"
        app:layout_constraintTop_toBottomOf="@+id/beginText"
        tools:ignore="LabelFor,TextFields"
        tools:text="Begin Date" />

    <EditText
        android:id="@+id/beginTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:minEms="3"
        app:layout_constraintBaseline_toBaselineOf="@+id/beginDate"
        app:layout_constraintStart_toEndOf="@+id/beginDate"
        tools:text="Begin Time"
        android:importantForAutofill="no"
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/beginAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:minEms="2"
        app:layout_constraintBaseline_toBaselineOf="@+id/beginTime"
        app:layout_constraintStart_toEndOf="@+id/beginTime"
        tools:text="Begin AM"
        android:importantForAutofill="no"
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:minEms="5"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/endText"
        app:layout_constraintTop_toBottomOf="@+id/endText"
        tools:ignore="LabelFor,TextFields"
        tools:text="End Date" />

    <EditText
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:minEms="3"
        app:layout_constraintBaseline_toBaselineOf="@+id/endDate"
        app:layout_constraintStart_toEndOf="@+id/endDate"
        tools:text="End Time"
        android:importantForAutofill="no"
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/endAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:minEms="2"
        app:layout_constraintStart_toEndOf="@+id/endTime"
        app:layout_constraintTop_toBottomOf="@+id/endText"
        tools:text="End AM"
        android:importantForAutofill="no"
        tools:ignore="LabelFor,TextFields" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/ownerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:text="@string/owner"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="25dp"
        android:text="@string/description"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ownerText" />

    <TextView
        android:id="@+id/beginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/begin_date_and_time"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/endText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/end_date_and_time"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beginDate" />


</androidx.constraintlayout.widget.ConstraintLayout>